Mon Apr 06 14:34:22 BST 2009  Tom Mortimer <tom@lemurconsulting.com>
    
    * flax/searchserver/schema.py: Added skeletal schema class.

Wed Apr 01 14:19:07 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* docs/api.rst: Simplified field schema spec.

Wed Apr 01 14:24:20 BST 2009  Tom Mortimer <tom@lemurconsulting.com>

	* flax/searchserver/dbutils.py: added import os as required by l.65

Wed Apr 01 12:42:55 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* docs/api.rst: Remove _doc_id from field data; docid is specified
	  as part of the resource string.  Other miscellaneous updates.

Wed Apr 01 12:40:42 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* flax/searchserver/application.py,flax/searchserver/controller.py,
	  flax/searchserver/dbutils.py: Changes to database storage to
	  allow any character in the database name.

Sun Mar 29 08:09:50 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* runserver.py,settings.py: Add settings['server_bind_address'] to
	  allow the address to run the server on to be configured.

Wed Mar 18 12:07:46 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* docs/api.rst: Add 'a' to 'z' to list of allowed unescaped
	  identifier characters.

Wed Mar 18 12:01:13 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* docs/api.rst: New policy on identifiers.

Tue Mar 17 18:39:50 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* docs/api.rst: Updates to the docs.

Tue Mar 17 18:23:00 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* flax/searchserver/application.py,flax/searchserver/controller.py:
	  Add support for creating and deleting databases.

Tue Mar 17 17:41:47 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* docs/api.rst: Add schema bit to table of resource URIs.

Tue Mar 17 17:31:35 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* docs/api.rst,flax/searchserver/application.py,